Correct stylesheet and script links to support GitHub Pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Library</title>
 </head>
 <body>
@@ -36,6 +36,6 @@
       <input type="submit" value="Submit" id="submit">
     </form>
   </div>
-  <script src="/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
