Update form submission listener

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <div class="form-container container invisible">
     <h1>Add a book:</h1>
-    <form action="#" onsubmit="return false;">
+    <form>
       <label for="name">What is the book name?</label>
       <input type="text" name="name" id="name">
       <label for="author">What is the author's name?</label>
